[gd_scene load_steps=10 format=3 uid="uid://dytvgccj1trvs"]

[ext_resource type="PackedScene" uid="uid://d0r2838jhsgjt" path="res://assets/enemy-ufo-a.glb" id="1_0mnlm"]
[ext_resource type="Script" path="res://scenes/basic_enemy.gd" id="1_ohs3t"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_2v73y"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_7w1vt"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_hoq08"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_v05dn"]

[sub_resource type="Animation" id="Animation_lbxrv"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/enemy-ufo-a2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2t45t"]
resource_name = "despawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/enemy-ufo-a2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ro022"]
_data = {
"despawn": SubResource("Animation_2t45t"),
"spawn": SubResource("Animation_lbxrv")
}

[node name="BasicEnemy" type="Node3D"]
script = ExtResource("1_ohs3t")

[node name="EnemyStateChart" type="Node" parent="."]
script = ExtResource("3_2v73y")

[node name="CompoundState" type="Node" parent="EnemyStateChart"]
script = ExtResource("4_7w1vt")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_v05dn")

[node name="ToTravelling" type="Node" parent="EnemyStateChart/CompoundState/Spawning"]
script = ExtResource("5_hoq08")
to = NodePath("../../Travelling")
event = &"to_travelling"
delay_in_seconds = "0.0"

[node name="Travelling" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_v05dn")

[node name="ToDespawning" type="Node" parent="EnemyStateChart/CompoundState/Travelling"]
script = ExtResource("5_hoq08")
to = NodePath("../../Despawning")
event = &"to_despawning"
delay_in_seconds = "0.0"

[node name="Despawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_v05dn")

[node name="Dying" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_v05dn")

[node name="Path3D" type="Path3D" parent="."]

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
loop = false

[node name="enemy-ufo-a2" parent="Path3D/PathFollow3D" instance=ExtResource("1_0mnlm")]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.25, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ro022")
}

[connection signal="state_entered" from="EnemyStateChart/CompoundState/Spawning" to="." method="_on_spawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Travelling" to="." method="_on_travelling_state_entered"]
[connection signal="state_processing" from="EnemyStateChart/CompoundState/Travelling" to="." method="_on_travelling_state_processing"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Despawning" to="." method="_on_despawning_state_entered"]
